--- a/src/AppBundle/Resources/public/Meat/css/settings.css
+++ b/src/AppBundle/Resources/public/Meat/css/settings.css
@@ -65,6 +65,9 @@ figure > img, img{
 .sSize{
 	font-size: 1em;
 }
+.mSize{
+	font-size: 1.2em;
+}
 .bs{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
