--- a/src/AppBundle/Resources/views/Meat/Common/footer.html.twig
+++ b/src/AppBundle/Resources/views/Meat/Common/footer.html.twig
@@ -1,4 +1,2 @@
 {# src/AppBundle/Resources/views/Meat/Common/footer.html.twig #}
-<footer id="footer">
-    <small>{{ 'copyright'|trans }}</small>
-</footer>
+<small>{{ 'copyright'|trans|raw }}</small>
