--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name=“robots” content=“noindex,nofollow”>
+        {% block meta %}
+            <meta charset="UTF-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+            <meta name=“robots” content=“noindex,nofollow”>
+        {% endblock %}
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/png" href="{{ asset('bundles/app/images/favicon.ico') }}" />
+        <link rel="icon" type="image/png" href="{{ asset('bundles/app/Meat/images/favicon.png') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
